# trading_portfolio

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.cursor/rules/: backtest-integrity.mdc  factor-implementation.mdc  import-style.mdc  look-ahead-bias.mdc  notebook-structure.mdc  path-style.mdc  research-validation-bias.mdc  reuse-interfaces.mdc  survivorship-bias.mdc
01_data/data_files/s1_equities/: s1_factor_panel.ipynb
01_data/ingestion/: __init__.py  equity_fetcher.py  fama_french_fetcher.py  sp500_universe.py
01_data/ingestion/alternative_data/: __init__.py  fama_french_fetcher.py  size_value_fetcher.py
01_data/processing/: __init__.py  feature_store.py
01_data/processing/feature_implementation/: __init__.py  beta.py  beta_features.py  gk_vol_ratio.py  idiosyncratic_vol.py  linear_regression.py  momentum.py  obv_momentum.py  size_and_valuation_features.py  utilities.py
02_research/: alternative_data_sources.md  hypothesis_log.md
02_research/notebooks/: template_nb.ipynb
02_research/notebooks/factor_tests/: H-001_obv_momentum.ipynb  H-002_gk_vol_ratio.ipynb  H-003_idiosyncratic_vol.ipynb  H-004_beta.ipynb  H-005_size_value.ipynb
02_research/notebooks/other_tests/: H-007_gdelt_data_vendors.ipynb
02_research/notebooks/redundant/: old_H-002_gk_vol_ratio.ipynb  old_H-004_beta.ipynb  old_fama_french_fetcher.py  test_finnhub.ipynb
04_risk/monte_carlo/: prop_firm.py  simulator.py
07_performance/: __init__.py
08_tests/: test_features.py  test_fetchers.py
08_tests/broker_tests/: alpaca_tests.py
09_performance/: metrics.py
10_tests/: test_features.py  test_fetchers.py  test_size_value_fetcher.py
10_tests/broker_tests/: alpaca_tests.py
data/ingestion/: __init__.py
data/processing/: cleaner.py
research/: hypothesis_log.md
strategies/base/: strategy.py
