# Maps logical Python package names (e.g. data, performance) to numbered
# top-level folders (e.g. 01_data, 07_performance). Folder names can't start
# with digits in import statements, so install editable from the repo root:
#
#   python -m pip install -e . --config-settings editable_mode=strict
#
# Use strict mode (path-based .pth + hardlink farm under build/) so basedpyright
# / static analysis can resolve `from data.ingestion...`. The default setuptools
# editable mode uses import hooks, which basedpyright cannot follow.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-portfolio"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.package-dir]
data = "01_data"
strategies = "03_strategies"
risk = "04_risk"
execution = "05_execution"
portfolio = "06_portfolio"
performance = "07_performance"

[tool.setuptools]
packages = [ 
  "data",
  "data.ingestion",
  "data.processing",
  "data.processing.feature_implementation",
  "strategies",
  "strategies.base",
  "risk",
  "risk.monte_carlo",
  "execution",
  "execution.brokers",
  "portfolio",
  "performance",
]
