# Maps logical Python package names (e.g. data, performance) to numbered
# top-level folders (e.g. 01_data, 09_performance). Folder names can't start
# with digits in import statements, so install editable from the repo root:
#
#   python -m pip install -e . --config-settings editable_mode=strict
#
# Use strict mode (path-based .pth + hardlink farm under build/) so basedpyright
# / static analysis can resolve `from data.ingestion...`. The default setuptools
# editable mode uses import hooks, which basedpyright cannot follow.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-portfolio"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.package-dir]
data = "01_data"
models = "03_models"
backtest = "04_backtest"
strategies = "05_strategies"
risk = "06_risk"
execution = "07_execution"
portfolio = "08_portfolio"
performance = "09_performance"

[tool.setuptools]
packages = [
  "data",
  "data.ingestion",
  "data.ingestion.alternative_data",
  "data.processing",
  "data.processing.feature_implementation",
  "models",
  "backtest",
  "strategies",
  "strategies.base",
  "risk",
  "risk.monte_carlo",
  "execution",
  "execution.brokers",
  "portfolio",
  "performance",
]
